--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = "www.example.com"
+baseURL = "lpaglione.github.io/learn-hugo"
 languageCode = "en-us"
 title = "Hugo Hero Theme"
 themesDir = "themes"
