--- a/config.toml
+++ b/config.toml
@@ -20,24 +20,29 @@ theme = "hugo-hero-theme"
 
 
 [[menu.main]]
-	name = "What we do"
+	name = "The Service"
 	url = "/services/"
     weight = 1
 
 [[menu.main]]
-    name = "Who we are"
+    name = "About"
     url = "/about/"
     weight = 2
 
 [[menu.main]]
-    name = "Getting started"
+    name = "Getting Started"
     url = "/work/"
     weight = 3
 
 [[menu.main]]
-    name = "News & Events"
+    name = "Contact"
     url = "/contact/"
     weight = 4
+
+[[menu.main]]
+    name = "Blog"
+    url = "/posts/"
+    weight = 5
 
 [permalinks]
   post = "/:year/:month/:day/:slug/"
