Full updates to the site

--- a/config.toml
+++ b/config.toml
@@ -9,14 +9,14 @@ theme = "hugo-hero-theme"
 
   [params.homepage_meta_tags]
     meta_description = "SeamlessAccess.org is a service designed to help foster a more streamlined online access experience when using scholarly collaboration tools, information resources, and shared research infrastructure."
-    meta_og_title = "Hugo Hero Theme"
+    meta_og_title = "SeamlessAccess.org - true Single Sign On"
     meta_og_type = "website"
-    meta_og_url = "https://hugo-hero.netlify.com"
-    meta_og_image = "https://raw.githubusercontent.com/JugglerX/hugo-hero-theme/master/images/tn.png"
-    meta_og_description = "SeamlessAccess.org is a service designed to help foster a more streamlined online access experience when using scholarly collaboration tools, information resources, and shared research infrastructure."
-    meta_twitter_card = "summary"
-    meta_twitter_site = "@zerostaticio"
-    meta_twitter_creator = "@zerostaticio"
+    meta_og_url = "https://seamlessaccess.org"
+    meta_og_image = "https://lpaglione.github.io/learn-hugo/images/logo.svg"
+    meta_og_description = "SeamlessAccess.org is a service designed to help foster a more streamlined online access experience when using scholarly collaboration tools, information resources, and shared research infrastructure. Your users will be able to sign in using their preferred sign in credentials, and will not be bothered for them again for all SeamlessAccess-enabled sites."
+    # meta_twitter_card = "summary"
+    # meta_twitter_site = "@zerostaticio"
+    # meta_twitter_creator = "@zerostaticio"
 
 
 [[menu.main]]
@@ -34,10 +34,10 @@ theme = "hugo-hero-theme"
     url = "/work/"
     weight = 3
 
-[[menu.main]]
-    name = "Contact"
-    url = "/contact/"
-    weight = 4
+# [[menu.main]]
+#    name = "Contact"
+#    url = "/contact/"
+#    weight = 4
 
 [[menu.main]]
     name = "Blog"
