--- a/data/contact.yaml
+++ b/data/contact.yaml
@@ -1,4 +1,5 @@
-email: 'zerostaticthemes@gmail.com'
-phone: 'XXXX XXX XXX'
-businessName: 'Hugo Serif'
-address: ''
+email: 'contact@SeamlessAccess.org'
+phone: ''
+businessName: 'SeamlessAccess'
+address: ""
+url: "SeamlessAccess.org"
