--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = "https://seamlessaccess-web.netlify.com/"
+baseURL = "https://seamlessaccess.org/"
 languageCode = "en-us"
 title = "SeamlessAcccess"
 themesDir = "themes"
