--- a/data/social.yaml
+++ b/data/social.yaml
@@ -1,5 +1,5 @@
 vimeo: ""
-twitter: "https://twitter.com/figuritltd"
+twitter: "https://twitter.com/seamlessaccess"
 instagram: ""
-linkedin: "https://www.linkedin.com/in/linda-chesher-81a35618/"
+linkedin: ""
 facebook: ""
