remove the youtube channel

--- a/data/social.yaml
+++ b/data/social.yaml
@@ -3,7 +3,7 @@
 #    AND layouts > shortcodes > socialinfo.html
 # If blank, it will not display
 twitter: "https://twitter.com/seamlessaccess"
-youtube: "https://www.youtube.com/channel/UCHVM4zXwtO3mKgGxBAwVVaQ/featured"
+youtube: ""
 instagram: ""
 linkedin: ""
 medium: ""
