--- a/config.toml
+++ b/config.toml
@@ -25,14 +25,24 @@ theme = "hugo-hero-theme"
     weight = 1
 
 [[menu.main]]
-    name = "About"
-    url = "/about/"
+	name = "Stakeholders"
+	url = "/stakeholders/"
     weight = 2
 
 [[menu.main]]
-    name = "Getting Started"
-    url = "/work/"
+    name = "Documentation"
+    url = "https://seamlessaccess.atlassian.net/wiki/spaces/DOCUMENTAT/overview"
     weight = 3
+    
+[[menu.main]]
+    name = "Learning Center"
+    url = "/learning-center/"
+    weight = 4
+
+[[menu.main]]
+    name = "About"
+    url = "/about/"
+    weight = 5
 
 # [[menu.main]]
 #    name = "Contact"
@@ -42,7 +52,7 @@ theme = "hugo-hero-theme"
 [[menu.main]]
     name = "Blog"
     url = "/posts/"
-    weight = 4
+    weight = 5
 
 [permalinks]
   post = "/:year/:month/:day/:slug/"
